Bug 723611 - Remove mainthread pragmas executed by the VacuumManager. r=sdwilsh